# SSHOrganizer

./: COPYING  LICENSE  MultiConnections.desktop  csd-dialogs.glade  csd.glade  dialogs.glade  meson.build  multiconnections.glade  multiconnections.py  noncsd.glade  org.gnome.Sshorganizer.json
data/: meson.build  org.gnome.SSHOrganizer.appdata.xml.in  org.gnome.SSHOrganizer.desktop.in  org.gnome.SSHOrganizer.gschema.xml  org.gnome.Sshorganizer.appdata.xml.in  org.gnome.Sshorganizer.desktop.in  org.gnome.Sshorganizer.gschema.xml
debian/: changelog  control  copyright  files  multiconnections_2.10-1_all.deb  rules
fedora/: multiconnections-2.10-1.fc27.noarch.rpm
po/: POTFILES  meson.build
src/: main.py  meson.build  sshorganizer.gresource.xml  sshorganizer.in  window.py  window.ui
src/database/: models.py  queries.py
src/dialogs/: about.py  about.ui  accounts.py  connection.py  connection.ui  group.py  group.ui
src/extra_modules/: connection_listrow.py  group_listrow.py
src/modules/: about.py  accounts.py  accounts.ui  custom_widgets.py  group.py  models.py  queries.py  sshpass
src/terminal/: terminal.py
src/ui/: group.ui  window.ui
src/widgets/: custom_widgets.py
ubuntu/: multiconnections_2.10-1_amd64.deb
